default keys impl and tests
Signed-off-by: Kat Shen <katshen@amazon.com>